<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.intino</groupId>
	<artifactId>magritte</artifactId>
	<version>5.0.0</version>
	<packaging>pom</packaging>
	<modules>
		<module>builder</module>
		<module>framework</module>
		<module>io</module>
	</modules>
	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>intino-maven</id>
			<name>intino-maven</name>
			<url>https://artifactory.intino.io/artifactory/releases</url>
		</repository>
	</repositories>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<testResources>
			<testResource>
				<directory>test-res</directory>
			</testResource>
		</testResources>
		<testSourceDirectory>test</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>intino-maven</id>
			<name>intino-maven-releases</name>
			<url>https://artifactory.intino.io/artifactory/release-frameworks</url>
		</repository>
	</distributionManagement>
</project>